syntax = "proto3";

package media;

service MediaService {
    rpc GetPresignedUrl (GetPresignedUrlRequest) returns (GetPresignedUrlResponse);
    rpc MediaUploaded (MediaUploadedRequest) returns (MediaUploadedResponse);
    rpc CollectionQuery (CollectionQueryRequest) returns (CollectionQueryResponse);
}

message GetPresignedUrlRequest {
    string fileName = 1;
    string fileType = 2;
}

message GetPresignedUrlResponse {
    string url = 1;
    string message = 2;
}

message MediaUploadedRequest {
    string fileName = 1;
    string authorId = 2;
}

message MediaUploadedResponse {
    string message = 2;
}

message CollectionQueryRequest {
    string query= 1;
    string collection= 2;
}

message CollectionQueryResponse {
    string jsonData = 1;
}
